--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ h1 {
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+    gap: 30px;
+    padding: 50px;
     justify-content: center;
     padding-top: 50px; 
 }
@@ -121,7 +121,6 @@ p {
     <div id="top">
     <h1>WZY52</h1>
     <div class="link">
-        
         <a href="index.html">About Me</a>
     </div>
 </div>
@@ -129,6 +128,12 @@ p {
     <center><font size="35px">About Me</font></center>
 </div>
     <div class="container">
+    <div class="item">
+            <h3>個人介紹</h3>
+			 <p><strong>姓名:</strong> 王芷芸</p>
+             <p><strong>學號:</strong> 1131547</p>
+              <p><strong>班級:</strong> 資工2B</p>
+        </div>
         <div class="item">
             <h3>學歷</h3>
 			 <p><strong>高中:</strong> 彰化女中普通班</p>
