--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     width: 100%;
     z-index: 1000;
     box-sizing: border-box;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
 h1 {
@@ -27,8 +28,9 @@ h1 {
 
 .link {
     display: flex;
+    padding: 40px;
     gap: 18px;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .link a {
@@ -62,7 +64,7 @@ h1 {
     font-size: 35px;
 }
 .item {
-    flex: 1 1 calc(33.33% - 40px);
+    flex: 1 1 calc(25% - 40px);
     box-sizing: border-box;
     border: 1px solid #ddd;
     padding: 10px;
@@ -72,6 +74,7 @@ h1 {
     opacity: 0;
     transform: translateY(30px);
     animation: fadeInUp 1s forwards;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
 @keyframes fadeInUp {
@@ -109,12 +112,6 @@ p {
     text-align: center;
 }
 
-.price {
-    font-size: 18px;
-    color: #ff6347;
-    font-weight: bold;
-    margin: 10px 0;
-}
 </style>
 </head>
 <body>
