--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
  <meta charset="UTF-8">  
-    <title>menu</title>
+    <title>Profile</title>
 <style>
 #top {
     display: flex;
@@ -98,6 +98,9 @@ h1 {
 
 .item:nth-child(3) {
     animation-delay: 0.7s;
+}
+.item:nth-child(4) {
+    animation-delay: 0.9s;
 }
 
 h3 {
